force-app/main/default/objects/Job__c/fields/Job_Occupation__c.field-meta.xml
<CustomField>
    <fullName>Job_Occupation__c</fullName>
    <label>Job Occupation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Financial Control</fullName>
            </value>
            <value>
                <fullName>Fund Accounting</fullName>
            </value>
            <value>
                <fullName>Corporate Finance</fullName>
            </value>
            <value>
                <fullName>Financial Analysis/Research/Reporting</fullName>
            </value>
            <value>
                <fullName>Investment Management</fullName>
            </value>
            <value>
                <fullName>Real Estate Leasing/Acquisition</fullName>
            </value>
            <value>
                <fullName>Tax Accounting</fullName>
            </value>
            <value>
                <fullName>General/Other: Accounting/Finance</fullName>
            </value>
            <value>
                <fullName>Actuarial Analysis</fullName>
            </value>
            <value>
                <fullName>Risk Management/Compliance</fullName>
            </value>
            <value>
                <fullName>Audit</fullName>
            </value>
            <value>
                <fullName>Collections</fullName>
            </value>
            <value>
                <fullName>Tax Assessment and Collections</fullName>
            </value>
            <value>
                <fullName>Credit Review/Analysis</fullName>
            </value>
            <value>
                <fullName>Financial Planning/Advising</fullName>
            </value>
            <value>
                <fullName>Accounts Payable/Receivable</fullName>
            </value>
            <value>
                <fullName>Financial Products Sales/Brokerage</fullName>
            </value>
            <value>
                <fullName>Bookkeeping</fullName>
            </value>
            <value>
                <fullName>Policy Underwriting</fullName>
            </value>
            <value>
                <fullName>Filing/Records Management</fullName>
            </value>
            <value>
                <fullName>Reception/Switchboard</fullName>
            </value>
            <value>
                <fullName>Property Management</fullName>
            </value>
            <value>
                <fullName>Executive Support</fullName>
            </value>
            <value>
                <fullName>Office Management</fullName>
            </value>
            <value>
                <fullName>Data Entry/Order Processing</fullName>
            </value>
            <value>
                <fullName>Administrative Support</fullName>
            </value>
            <value>
                <fullName>General/Other: Administrative/Clerical</fullName>
            </value>
            <value>
                <fullName>Secretary/Executive Assistant</fullName>
            </value>
            <value>
                <fullName>test</fullName>
                <isActive>false</isActive>
                <label>test</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>