force-app/main/default/objects/Job__c/fields/Job_Post_Id__c.field-meta.xml
<CustomField>
    <fullName>Job_Post_Id__c</fullName>
    <label>Job Post Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>