force-app/main/default/objects/Job__c/fields/Job_Post_Status__c.field-meta.xml
<CustomField>
    <fullName>Job_Post_Status__c</fullName>
    <label>Job Post Status</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>