force-app/main/default/objects/Job__c/fields/Job_Posting_Currency__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting_Currency__c</fullName>
    <label>Job Posting Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>