force-app/main/default/objects/Job__c/fields/Job_Posting_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting_Date__c</fullName>
    <label>Job Posting Date</label>
    <type>Date</type>
</CustomField>