force-app/main/default/objects/Job__c/fields/Job_Posting_URL__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting_URL__c</fullName>
    <label>Job Posting URL</label>
    <type>Url</type>
</CustomField>