force-app/main/default/objects/Job__c/fields/Job_Publish_Site_Text__c.field-meta.xml
<CustomField>
    <fullName>Job_Publish_Site_Text__c</fullName>
    <label>Job Publish Site (Text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>