force-app/main/default/objects/Job__c/fields/Job_Publish_Tiny_URL__c.field-meta.xml
<CustomField>
    <fullName>Job_Publish_Tiny_URL__c</fullName>
    <label>Job Publish Tiny URL</label>
    <type>Url</type>
</CustomField>