force-app/main/default/objects/Job__c/fields/Job_Publish_URL__c.field-meta.xml
<CustomField>
    <fullName>Job_Publish_URL__c</fullName>
    <formula>&quot;https://recruiting.avankia.com/hrstaffing/l.get?command=showProfile&amp;config=&quot; &amp; SUBSTITUTE(TRIM(LOWER($Organization.Name)),&quot; &quot;, &quot;&quot;) &amp;&quot;&amp;jobSfId=&quot;&amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Publish URL</label>
    <type>Text</type>
</CustomField>