force-app/main/default/objects/Job__c/fields/Job_Recruiter__c.field-meta.xml
<CustomField>
    <fullName>Job_Recruiter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Recruiter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Jobs4</relationshipName>
    <type>Lookup</type>
</CustomField>