force-app/main/default/objects/Job__c/fields/Job_Short_List__c.field-meta.xml
<CustomField>
    <fullName>Job_Short_List__c</fullName>
    <label>Job Short List</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>List 1</fullName>
            </value>
            <value>
                <fullName>List 2</fullName>
            </value>
            <value>
                <fullName>test</fullName>
                <isActive>false</isActive>
                <label>test</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>