force-app/main/default/objects/Job__c/fields/Job_Stage_Open__c.field-meta.xml
<CustomField>
    <fullName>Job_Stage_Open__c</fullName>
    <formula>IF((TEXT( Stage__c )= &apos;Open&apos; || TEXT( Stage__c )= &apos;Sourcing&apos; || TEXT( Stage__c )= &apos;Interviewing&apos; || TEXT( Stage__c )= &apos;Partially Filled&apos; || TEXT( Stage__c )= &apos;Offer&apos; ) , &apos;Yes&apos;, &apos;No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Stage Open</label>
    <type>Text</type>
</CustomField>