force-app/main/default/objects/Job__c/fields/Job_State_RA__c.field-meta.xml
<CustomField>
    <fullName>Job_State_RA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job State RA</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Jobs5</relationshipName>
    <type>Lookup</type>
</CustomField>