force-app/main/default/objects/Job__c/fields/Job_State_RA_Id__c.field-meta.xml
<CustomField>
    <fullName>Job_State_RA_Id__c</fullName>
    <formula>Job_State_RA__c</formula>
    <label>Job State RA Id</label>
    <type>Text</type>
</CustomField>