force-app/main/default/objects/Job__c/fields/Job_Summary__c.field-meta.xml
<CustomField>
    <fullName>Job_Summary__c</fullName>
    <label>Job Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>