force-app/main/default/objects/Job__c/fields/Job_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Job_Time_Zone__c</fullName>
    <label>Job Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-CST</fullName>
            </value>
            <value>
                <fullName>-EST</fullName>
            </value>
            <value>
                <fullName>-GMT</fullName>
            </value>
            <value>
                <fullName>-MST</fullName>
            </value>
            <value>
                <fullName>-PST</fullName>
            </value>
            <value>
                <fullName>test</fullName>
                <isActive>false</isActive>
                <label>test</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>