force-app/main/default/objects/Job__c/fields/Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Type__c</fullName>
    <label>Job Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permanent</fullName>
            </value>
            <value>
                <fullName>Full-Time</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Temporary</fullName>
            </value>
            <value>
                <fullName>Internship</fullName>
            </value>
            <value>
                <fullName>Freelance</fullName>
            </value>
            <value>
                <fullName>Contract Full Time</fullName>
            </value>
            <value>
                <fullName>Contract Part Time</fullName>
            </value>
            <value>
                <fullName>Per Diem / PRN</fullName>
            </value>
            <value>
                <fullName>Permanent Full Time</fullName>
            </value>
            <value>
                <fullName>Permanent Part Time</fullName>
            </value>
            <value>
                <fullName>Temp To Perm</fullName>
            </value>
            <value>
                <fullName>Part Time</fullName>
            </value>
            <value>
                <fullName>Contract Full-Time</fullName>
                <isActive>false</isActive>
                <label>Contract Full-Time</label>
            </value>
            <value>
                <fullName>Contract Part-Time</fullName>
                <isActive>false</isActive>
                <label>Contract Part-Time</label>
            </value>
            <value>
                <fullName>Part-Time</fullName>
                <isActive>false</isActive>
                <label>Part-Time</label>
            </value>
            <value>
                <fullName>Per Diem</fullName>
                <isActive>false</isActive>
                <label>Per Diem</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>