force-app/main/default/objects/Job__c/fields/JobRobotix_ID__c.field-meta.xml
<CustomField>
    <fullName>JobRobotix_ID__c</fullName>
    <label>JobRobotix ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>