force-app/main/default/objects/Job__c/fields/Malpractice_Insurance_Required__c.field-meta.xml
<CustomField>
    <fullName>Malpractice_Insurance_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Malpractice Insurance Required</label>
    <type>Checkbox</type>
</CustomField>