force-app/main/default/objects/Job__c/fields/Mapping_Result__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Result__c</fullName>
    <label>Mapping Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>