force-app/main/default/objects/Job__c/fields/Mapping_Status__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Status__c</fullName>
    <label>Mapping Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Located Yet</fullName>
            </value>
            <value>
                <fullName>Located</fullName>
            </value>
            <value>
                <fullName>Problem with Address</fullName>
            </value>
            <value>
                <fullName>Google Error</fullName>
            </value>
            <value>
                <fullName>Google Exhausted</fullName>
            </value>
            <value>
                <fullName>test</fullName>
                <isActive>false</isActive>
                <label>test</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>