force-app/main/default/objects/Job__c/fields/Marketing_Hot_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Hot_Jobs__c</fullName>
    <formula>Client__r.Marketing_Hot_Jobs__c</formula>
    <label>Marketing Hot Jobs</label>
    <type>Checkbox</type>
</CustomField>