force-app/main/default/objects/Job__c/fields/Max_Salary__c.field-meta.xml
<CustomField>
    <fullName>Max_Salary__c</fullName>
    <label>Max Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>