force-app/main/default/objects/Job__c/fields/Max_Submissions_to_Client__c.field-meta.xml
<CustomField>
    <fullName>Max_Submissions_to_Client__c</fullName>
    <label>Max Submissions to Client</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>