force-app/main/default/objects/Job__c/fields/Miles_for_Search__c.field-meta.xml
<CustomField>
    <fullName>Miles_for_Search__c</fullName>
    <label>Miles for Search</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>