force-app/main/default/objects/Job__c/fields/Min_Education__c.field-meta.xml
<CustomField>
    <fullName>Min_Education__c</fullName>
    <label>Min Education</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Associate Degree</fullName>
            </value>
            <value>
                <fullName>Bachelor&apos;s Degree</fullName>
            </value>
            <value>
                <fullName>Certification</fullName>
            </value>
            <value>
                <fullName>Doctorate Degree</fullName>
            </value>
            <value>
                <fullName>High School Not Completed</fullName>
            </value>
            <value>
                <fullName>High School or equivalent</fullName>
            </value>
            <value>
                <fullName>Master&apos;s Degree</fullName>
            </value>
            <value>
                <fullName>Some College Coursework</fullName>
            </value>
            <value>
                <fullName>test</fullName>
                <isActive>false</isActive>
                <label>test</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>