force-app/main/default/objects/Job__c/fields/Min_Salary__c.field-meta.xml
<CustomField>
    <fullName>Min_Salary__c</fullName>
    <label>Min Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>