force-app/main/default/objects/Job__c/fields/Minimum_Experience_Years__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Experience_Years__c</fullName>
    <label>Minimum Experience (Years)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>