force-app/main/default/objects/Job__c/fields/MSP_VMS_Account__c.field-meta.xml
<CustomField>
    <fullName>MSP_VMS_Account__c</fullName>
    <formula>Client__r.MSP_VMS_Account__r.Account_Name_Text__c</formula>
    <label>MSP/VMS Account</label>
    <type>Text</type>
</CustomField>