force-app/main/default/objects/Job__c/fields/Net_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Net_Payment_Terms__c</fullName>
    <formula>TEXT( Client__r.Net_Payment_Terms__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Payment Terms</label>
    <type>Text</type>
</CustomField>