force-app/main/default/objects/Job__c/fields/New_Grads_Accepted__c.field-meta.xml
<CustomField>
    <fullName>New_Grads_Accepted__c</fullName>
    <label>New Grads Accepted</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>