force-app/main/default/objects/Job__c/fields/No_of_Open_Positions_for_Open_Jobs__c.field-meta.xml
<CustomField>
    <fullName>No_of_Open_Positions_for_Open_Jobs__c</fullName>
    <formula>IF ( TEXT( Stage__c ) = &apos;Closed&apos; || TEXT( Stage__c ) = &apos;On Hold&apos; || TEXT( Stage__c ) = &apos;Filled&apos;, 0, Number_Of_Open_Positions_Custom__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No. of Open Positions for Open Jobs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>