force-app/main/default/objects/Job__c/fields/Notify_All_Recruiters__c.field-meta.xml
<CustomField>
    <fullName>Notify_All_Recruiters__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify All Recruiters</label>
    <type>Checkbox</type>
</CustomField>