force-app/main/default/objects/Job__c/fields/Notify_All_Vendors__c.field-meta.xml
<CustomField>
    <fullName>Notify_All_Vendors__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify All Vendors</label>
    <type>Checkbox</type>
</CustomField>