force-app/main/default/objects/Job__c/fields/Number_of_Internal_Submissions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Internal_Submissions__c</fullName>
    <label>Number of Internal Submissions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>