force-app/main/default/objects/Job__c/fields/Number_of_Interviews__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Interviews__c</fullName>
    <label>Number of Interviews</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>