force-app/main/default/objects/Job__c/fields/Number_of_Non_Minority_Applicants__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Non_Minority_Applicants__c</fullName>
    <label>Number of Non Minority Applicants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>