force-app/main/default/objects/Job__c/fields/Number_of_Open_Positions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Open_Positions__c</fullName>
    <formula>Number_of_Positions__c - Number_of_Placements__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Open Positions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>