force-app/main/default/objects/Job__c/fields/Number_Of_Open_Positions_from_HM_Portal__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Open_Positions_from_HM_Portal__c</fullName>
    <label>Number Of Open Positions from HM Portal</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>