force-app/main/default/objects/Job__c/fields/Number_of_Weeks__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Weeks__c</fullName>
    <formula>( Estimated_End_Date__c -  Estimated_Start_Date__c )/7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Weeks</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>