force-app/main/default/objects/Job__c/fields/Old_Miles__c.field-meta.xml
<CustomField>
    <fullName>Old_Miles__c</fullName>
    <label>Old Miles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>