force-app/main/default/objects/Job__c/fields/Open_Positions__c.field-meta.xml
<CustomField>
    <fullName>Open_Positions__c</fullName>
    <label>Open Positions</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>