force-app/main/default/objects/Job__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Jobs6</relationshipName>
    <type>Lookup</type>
</CustomField>