force-app/main/default/objects/Job__c/fields/Overall_Experience__c.field-meta.xml
<CustomField>
    <fullName>Overall_Experience__c</fullName>
    <label>Overall Experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01-03 Years</fullName>
            </value>
            <value>
                <fullName>04-06 Years</fullName>
            </value>
            <value>
                <fullName>07-09 Years</fullName>
            </value>
            <value>
                <fullName>10+ Years</fullName>
            </value>
            <value>
                <fullName>test</fullName>
                <isActive>false</isActive>
                <label>test</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>