force-app/main/default/objects/Job__c/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <formula>Client__r.Parent.Name</formula>
    <label>Parent Account</label>
    <type>Text</type>
</CustomField>