force-app/main/default/objects/Job__c/fields/Pay_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Pay_Frequency__c</fullName>
    <label>Pay Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hourly</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Per Diem</fullName>
            </value>
            <value>
                <fullName>Project-Based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>