force-app/main/default/objects/Job__c/fields/Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>Pay_Rate__c</fullName>
    <label>Pay Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>