force-app/main/default/objects/Job__c/fields/Pay_Rate_High__c.field-meta.xml
<CustomField>
    <fullName>Pay_Rate_High__c</fullName>
    <label>Pay Rate High</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>