force-app/main/default/objects/Job__c/fields/Perm_Fee__c.field-meta.xml
<CustomField>
    <fullName>Perm_Fee__c</fullName>
    <label>Perm Fee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>