force-app/main/default/objects/Job__c/fields/Perm_Recruiter__c.field-meta.xml
<CustomField>
    <fullName>Perm_Recruiter__c</fullName>
    <formula>Client__r.Perm_Recruiter__r.FirstName &amp;&quot; &quot;&amp;
Client__r.Perm_Recruiter__r.LastName</formula>
    <label>Perm Recruiter</label>
    <type>Text</type>
</CustomField>