force-app/main/default/objects/Job__c/fields/Place__c.field-meta.xml
<CustomField>
    <fullName>Place__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Place</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Jobs7</relationshipName>
    <type>Lookup</type>
</CustomField>