force-app/main/default/objects/Job__c/fields/Placed_By__c.field-meta.xml
<CustomField>
    <fullName>Placed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Placed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Jobs8</relationshipName>
    <type>Lookup</type>
</CustomField>