force-app/main/default/objects/Job__c/fields/PO_Required_for_This_Job__c.field-meta.xml
<CustomField>
    <fullName>PO_Required_for_This_Job__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PO Required for This Job</label>
    <type>Checkbox</type>
</CustomField>