force-app/main/default/objects/Job__c/fields/Position_Id__c.field-meta.xml
<CustomField>
    <fullName>Position_Id__c</fullName>
    <label>Position Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>